<resources>
    <string name="app_name">Activity_login</string>
    <string name="don_t_have_an_account">Don\'t have an Account</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">LOGIN</string>
    <string name="first_name">First Name</string>
    <string name="sur_name">Surname</string>
    <string name="sign_in">SIGN IN</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="agree_to_out_terms_amp_conditions"><![CDATA[Agree to Out Terms & Conditions]]></string>
    <string name="password">PASSWORD</string>
    <string name="email_mobile">EMAIL/MOBILE</string>
</resources>